# ies2025

./: LICENSE  README.md  data_processing.ipynb  experiments.ipynb  pyproject.toml  training.py
checkpoints/: vae.pth
data/: README.md
data/Clubelo/: clubelo_2024-01-01.csv
data/Transfermarkt/: players_bio_tm.csv  players_bio_tm_Belgian Pro League.csv  players_bio_tm_Bundesliga 2.csv  players_bio_tm_Bundesliga.csv  players_bio_tm_Campeonato Brasileiro Série A.csv  players_bio_tm_Championship.csv  players_bio_tm_Eredivisie.csv  players_bio_tm_La Liga 2.csv  players_bio_tm_La Liga.csv  players_bio_tm_Liga MX.csv  players_bio_tm_Ligue 1.csv  players_bio_tm_Ligue 2.csv  players_bio_tm_Major League Soccer.csv  players_bio_tm_Premier League.csv  players_bio_tm_Primeira Liga.csv  players_bio_tm_Serie A.csv  players_bio_tm_Serie B.csv
models/: __init__.py  variational_autoencoder.py
scraping/: scrape_FBref.py  scrape_Transfermarkt.py
scraping/Scrapers/: __init__.py  fbref_scraper.py  tm_scraper.py
